_sass/baltic.scss
@charset "utf-8";

@import "baltic/color";
@import "baltic/layout";
@import "baltic/rouge-nord";

html {
    font-family: "Jetbrains Mono", "Courier New", monospace;
    background-color: $deep;
}

html, 
body {
    margin: 0;
    padding: 0;
}

body {
    background-color: $nord;
    color: $body;

    @media (prefers-color-scheme: light) {
        &.light {
            background-color: $nord_snow_light;
            color: $body_dark;
        }
    }
}

h1 {
    font-weight: 900;
    color: $gotland;
}

h3 {
    font-weight: 200;
}

strong { 
    font-weight: 900;
}

a {
    text-decoration: none;
    color: $tallinn;

    &:hover{ 
        transition: 0.2s;
        color: $riga;
    }
}

hr {
    color: $vilnius;
    background-color: $vilnius;
    border-color: $vilnius;

    max-width: 90ch;
    margin: 40px 0;
}

.header {
    display: grid;
    grid-template-columns: auto auto;
    padding: 40px $pad_h;
    background-color: $header;
    // border-bottom:4px solid #222d36;

    .header-title-link {
        font-weight: 700;
        color: $body;
        transition: 0.2s;

        &:hover {
            color: $riga;
        }
    }

    .header-nav-link {
        margin: 0 20px;
        font-weight: 500;
        color: $vilnius;
        transition: 0.2s;

        &:hover {
            color: $dainava;
        }
    }
}

.content-area {
    display: block;
    max-width: calc(100vw - $pad_h);
    min-height: 75vh;
    margin: 40px $pad_h;

    p {
        max-width: 90ch;
        line-height: 1.45;
        font-size: 13px;
    }

    figure {
        margin: 0;
        
        figcaption {
            margin: 10px 0 20px $border_radius;
            padding: $border_radius;
            border-left: 4px solid $riga;
            font-size: 0.85em;
            font-style: italic;
            color: $tallinn;
        }
    }

    video,
    img {
        max-width: 100%;
        border-radius: 12px;
    }
}

.publication {
    font-size: smaller;
    margin-bottom: 20px;

    .pub-title,
    .pub-date,
    .pub-meta_special,
    .pub-venue_name,
    .pub-meta-num,
    .pub-author_is-site-author,
    .pub-link-anchor {
        font-weight: 900;
    }

    .pub-title {
        margin-bottom: 4px;
    }

    .pub-title,
    .pub-venue_name {
        color: $helsinki;
    }
    .pub-meta {
        color: $gotland;
        line-height: 1.8;
        margin-top: 0;
        margin-bottom: 0;
    }

    .pub-meta, 
    .pub-authors,
    .pub-summary {
        padding-left: 10px;
        font-size: smaller;
    }
    .pub-authors,
    .pub-summary {
        margin-top: .65em;
    }

    .pub-date,
    .pub-meta_special {
        color: $tallinn;
    }
    .pub-meta_num {
        color: $dainava;
    }

    .pub-authors {
        margin-top: 2px;
        color: $gotland;
    }

    .pub-meta + .pub-meta {
        margin-top: 2px;
    }

    .pub-link-anchor {
        color: $dainava;
        &:hover {
            color: $riga;
        }
    }

    .pub-summary {
        padding-left: 20px;
        font-size: 10px;
    }

    @media (prefers-color-scheme: light) {
        .light & {
            .pub-title,
            .pub-venue_name {
                color: $kihnu;
            }
            .pub-meta {
                color: $gotland;
            }
        }
    }
}

ul.link-list {
    padding-left: 0;
    margin-left: 0;
    
    li {
        list-style: none;
        margin: 5px 0;
        
        a {
            color: $dainava;
            transition: 0.2s;

            &:hover {
                color: $tallinn;
            }
        }
    }
}

.baltic-footer {
    display: block;
    width: 100%;
    // padding: $pad_h;

    .copyright {
        display: block;
        padding: 10px $pad_h;
        font-size: smaller;
        background-color: $shallow;
        color: $body;

        .symbol {
            color: $helsinki;
            font-weight: 700;
        }

        .light & {
            background-color: $nord;
        }
    }
}

.footer-content {
    display: grid;
    grid-template-columns: 360px auto;
    grid-column-gap: 4ch;
    
    background-color: $deep;

    @media (prefers-color-scheme: light) {
        .light & {
            background-color: $squall;
        }
    }

    color: $nord_snow_med;
    padding: 20px $pad_h;

    font-size: small;

    @media screen and (max-width: $break_800) {
        grid-template-columns: auto;
        grid-row-gap: 4ch;
    }
}

.number {
    color: $dainava;
}

.str-literal {
    color: $gothenburg;

    @media (prefers-color-scheme: light) {
        .light & {
            color: $gothenburg_dark;
        }
    }

    @at-root a.str-literal {
        text-decoration: underline;
        transition: 0.2s;

        &:hover {
            color: $vilnius;
        }
    }
}

.class {
    color: $gotland;
}

.common {
    color: $stockholm;

    @media (prefers-color-scheme: light) {
        .light & {
            color: $stockholm_dark;
        }
    }
}

.rare {
    font-weight: 900;
    color: $sarek;
}

// Stylize post attributes to look like JSON
.json-meta {
    font-size: smaller;
    padding: 10px;
    border-radius: $border_radius;
    max-width: 80ch;

    background-color: $nord;

    @media (prefers-color-scheme: light) {
        .light & {
            background-color: $body;
        }
    }
}

